--- a/notebooks/01_exploration.ipynb
+++ b/notebooks/01_exploration.ipynb
@@ -1054,6 +1054,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "40334c33",
+   "metadata": {},
+   "source": [
+    "Correlation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 54,
    "id": "9deb4ca9",
@@ -1077,6 +1085,12 @@
     "plt.title('Feature Correlation Heatmap', fontweight= 'bold')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2104940",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
